[tool.poetry]
name = "meu-projeto"
version = "0.1.0"
description = ""
authors = ["M.Vinicius Moraes <ma.vinicius.moraes@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
pytest-cov = "^5.0.0"
blue = "^0.9.1"
isort = "^5.13.2"
taskipy = "^1.12.2"


[tool.poetry.group.doc.dependencies]
mkdocstrings = "^0.24.3"
mkdocstrings-python = "^1.9.2"
mkdocs-material = "^9.5.17"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = "."
addopts = "--doctest-modules"

[tool.isort]
profile = "black"
line_length = 79

[tool.taskipy.tasks]
lint = "blue --check --diff . && isort --check --diff ."
docs = "mkdocs serve"
test = "pytest -s -x --cov=meu-projeto -vv"
pre_test = "task lint"
post_test = "coverage html"
